# choreo

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  opencode.sh  package-lock.json
.cursor/rules/: session-con.mdc
docs/: bugfix-plan-retry-and-task-sync.md  design-container-reconciler.md  design-container-retry-and-task-cas.md  design-event-driven-state-machine.md  design-retry-via-event.md  design-unified-event-protocol.md  gallery.md
frontend/src/api/: notification.ts  subscription.ts
frontend/src/components/layout/: header-bar.vue  sidebar-menu.vue
frontend/src/router/: index.ts
frontend/src/types/: notification.d.ts  task.d.ts
frontend/src/views/notification/: list.vue
frontend/src/views/subscription/: list.vue
frontend/src/views/task/template/: editor.vue
frontend/src/views/workflow/editor/: forkjoin-task-panel.vue  forkjoin-task-utils.ts  index.vue  parallel-inner-task-utils.ts
frontend/src/views/workflow/instance/: detail.vue
src/: config.rs  lib.rs
src/crates/api/src/: error.rs  router.rs
src/crates/api/src/handler/: mod.rs
src/crates/application/: Cargo.toml
src/crates/application/src/auth/: context.rs  mod.rs  service.rs  token.rs
src/crates/application/src/usecase/: approval.rs  mod.rs  task.rs  workflow.rs
src/crates/common/src/: pagination.rs
src/crates/domain/src/: lib.rs
src/crates/http-handler/: Cargo.toml
src/crates/http-handler/src/: router.rs
src/crates/mcp-handler/: Cargo.toml
src/crates/mcp-handler/src/: server.rs
src/crates/mcp-handler/src/tools/: workflow.rs
(+106 files in other folders)
