[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1.89"
anyhow = "1.0.102"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
