[package]
name = "mcp-handler"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
application = { path = "../application" }
domain = { path = "../domain" }
common = { path = "../common" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
anyhow = "1.0.102"
http = "1"
